postgres-macros/tests/fail-nightly/literal_array_to_literal.stderr
error[E0277]: the trait bound `String: sqlm_postgres::query::Query<sqlm_postgres::types::Array<Vec<String>>>` is not satisfied
 --> tests/fail-nightly/literal_array_to_literal.rs:6:10
  |
6 |         .await
  |         -^^^^^
  |         ||
  |         |the trait `sqlm_postgres::query::Query<sqlm_postgres::types::Array<Vec<String>>>` is not implemented for `String`
  |         help: remove the `.await`
  |
  = help: the following other types implement trait `sqlm_postgres::query::Query<Cols>`:
            `()` implements `sqlm_postgres::query::Query<()>`
            `Option<T>` implements `sqlm_postgres::query::Query<Primitive<<T as SqlType>::Type>>`
            `Option<T>` implements `sqlm_postgres::query::Query<Struct<Cols>>`
            `Option<Vec<u8>>` implements `sqlm_postgres::query::Query<Primitive<Bytea>>`
            `Vec<T>` implements `sqlm_postgres::query::Query<Primitive<<T as SqlType>::Type>>`
            `Vec<T>` implements `sqlm_postgres::query::Query<Struct<Cols>>`
            `Vec<T>` implements `sqlm_postgres::query::Query<sqlm_postgres::types::Array<Vec<<T as SqlType>::Type>>>`
            `Vec<Vec<u8>>` implements `sqlm_postgres::query::Query<Primitive<Bytea>>`
          and $N others
  = note: required for `Sql<'_, sqlm_postgres::types::Array<Vec<String>>, String>` to implement `IntoFuture`
